Fixed setFavorite toggle bugs. If user is admin edit recipe button is visible. It navigates user to edit recipe page.

--- a/reseptisovellus/src/Components/Pages/RecipeDetails.css
+++ b/reseptisovellus/src/Components/Pages/RecipeDetails.css
@@ -38,23 +38,27 @@
 
 .recipe-detail-favorite {
   display: flex;
-  justify-content: start;
-  align-items: center;
-  margin-left: 60%
+  justify-content: end;
+  align-items: flex-end;
+  margin-left: 400px;
+  padding-left: 5px;
+
 }
 
 /* Recipe Detail Image */
 .recipe-detail-image {
   margin-bottom: 20px;
+  border: 2px solid grey;
+  border-radius: 5px;
 }
 
 .recipe-detail-image img {
-  margin-bottom: 5px;
   display: flex;
   justify-content: center;
   width: 100%;
   height: 500px;
-  border-radius: 8px;
+  border-radius: 5px;
+  
 }
 
 /* Recipe Detail Actions */
